tests/fail/elaboration/unsolved/fun-literal-placeholder-body-type.snap
stdout = '''
fun (A : Type) (a : ?2 A) (b : A) => a : fun (A : Type) -> ?2 A -> A -> ?2 A
'''
stderr = '''
error: failed to infer named pattern type
  ┌─ tests/fail/elaboration/unsolved/fun-literal-placeholder-body-type.fathom:3:16
  │
3 │ fun (A : Type) a (b : A) => a : fun (A : Type) -> _
  │                ^ unsolved named pattern type

'''
